<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <!-- Placeholder destinations - will be replaced in C09+ -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.traffic.drunkguard.ui.login.LoginFragment"
        android:label="@string/title_login">
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.traffic.drunkguard.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard">
        <action
            android:id="@+id/action_dashboard_to_newCheck"
            app:destination="@id/newCheckFragment" />
        <action
            android:id="@+id/action_dashboard_to_records"
            app:destination="@id/recordsFragment" />
        <action
            android:id="@+id/action_dashboard_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/newCheckFragment"
        android:name="com.traffic.drunkguard.ui.newcheck.NewCheckFragment"
        android:label="@string/title_new_check">
        <action
            android:id="@+id/action_newCheck_to_challan"
            app:destination="@id/challanFragment" />
    </fragment>

    <fragment
        android:id="@+id/challanFragment"
        android:name="com.traffic.drunkguard.ui.challan.ChallanFragment"
        android:label="@string/title_challan">
        <action
            android:id="@+id/action_challan_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/dashboardFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/recordsFragment"
        android:name="com.traffic.drunkguard.ui.records.RecordsFragment"
        android:label="@string/title_records" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.traffic.drunkguard.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>